# Pi_Pico_C_Projects

./: README.md
bb_spi_lcd/: CMakeLists.txt  bb_spi_lcd.c  bb_spi_lcd.h  gif.c  raspberrypi.h  spi_lcd_demo.c
ss_oled/: BitBang_I2C.c  BitBang_I2C.h  CMakeLists.txt  ss_oled.c  ss_oled.h  ss_oled_demo.c
